add broadcast block and transaction

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!-- Websocket might be a great idea -->
+<!-- TODO: Validate only public key will allow to received transaction -->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
