--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,9 @@
             >
               Mine Coins
             </button>
+            <button class="btn btn-warning" @click="onResolve">
+              Resolve Conflicts
+            </button>
           </div>
         </div>
         <div class="row">
@@ -395,6 +398,19 @@
                 vm.success = response.data.message;
                 console.log(response.data);
                 vm.funds = response.data.funds;
+              })
+              .catch(function (error) {
+                vm.success = null;
+                vm.error = error.response.data.message;
+              });
+          },
+          onResolve: function () {
+            var vm = this;
+            axios
+              .post("/resolve-conflicts")
+              .then(function (response) {
+                vm.error = null;
+                vm.success = response.data.message;
               })
               .catch(function (error) {
                 vm.success = null;
