chore: button label, add cors, and readme update

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
               class="btn btn-success"
               @click="onMine"
             >
-              Mine Coins
+              Mine A Block
             </button>
             <button class="btn btn-warning" @click="onResolve">
               Resolve Conflicts
